--- a/index.html
+++ b/index.html
@@ -10,3 +10,6 @@
     <li><a href="https://kristinaengland.github.io/design-system/styles">Styles</a></li>
     <li><a href="https://kristinaengland.github.io/design-system/components">Components</a</li>
     <li>Patterns</li>
+</body>
+</html>
+     
